--- a/20191018/mobile-app/index.html
+++ b/20191018/mobile-app/index.html
@@ -4,12 +4,13 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Foundation for Sites</title>
+    <title>Mobile App</title>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet">
+<!--  <link rel="stylesheet" href="css/font-awesome-4.7.0/css/font-awesome.css"> -->
     <link rel="stylesheet" href="css/foundation.css">
     <link rel="stylesheet" href="css/app.css">
     <link rel="stylesheet" href="css/nav.css">
     <link rel="stylesheet" href="css/header.css">
-    <link rel="stylesheet" href="css/content.css">
     <link rel="stylesheet" href="css/footer.css">
   </head>
   <body>
@@ -91,14 +92,6 @@
   </a>
 </div>
 <!-- end of footer -->
-
-
-
-
-
-
-
-
 
     <script src="js/vendor/jquery.js"></script>
     <script src="js/vendor/what-input.js"></script>
